mobile/scss/modules/profile.scss
/* ... */
.profile-handle {
  color: $energized;
}

.profile-tabs{
  position: absolute;
  top: 0;
  left: 0;
  bottom: $tabs-height;
  right: 0;
  z-index: 1;

    > .tab-nav{
      top: 0 !important;
      position: absolute;
      left: 0;
      right: 0;
      height: $tabs-height;
      background: $ribbon-bg;
      text-transform: uppercase;
      padding: 0;
      color: $secondary-text-action;

      .tab-item{
        font-weight: bold;
        font-size: $tabs-text-font-size;
        padding: ($tabs-height/2 - $tabs-text-font-size/2) 0;
        line-height: $tabs-text-font-size * $line-height-base;
        color: #999;

        &.tab-item-active{
          color: $light;
        }
      }
    }

    .tab-content{
      padding-top: 70px;
      background: #eee;

      .content-button{
        position: absolute;
        left: 0;
        bottom: 0;
        width: 100%;
        font-size: 14px;
        min-height: 44px;
        border-width: 1px 0 0;

        .ico{
          margin-right: 10px;
          vertical-align: middle;
        }
      }
    }
}

.reviews-list{
  .item{
    margin-bottom: 2px;

    > .ico{
      float: left;
      margin-right: 15px;
    }

    .review{
      overflow: hidden;

      .top{
        padding: 3px 0 5px;
        overflow: hidden;
        height: auto;

        .rating{
          font-size: 17px;

          li{
            float: left;

            i{color: #3b9fa1;}
          }
        }

        .time{
          float: right;
        }
      }

      .title{
        display: block;
        overflow: hidden;
        text-overflow: ellipsis;
        padding: 0 0 5px;
      }
      .message{
        margin: 0 0 5px;
        display: block;
        display: -webkit-box;
        overflow: hidden;
        white-space: normal;
        text-overflow: ellipsis;
        -webkit-box-orient: vertical;
        -webkit-line-clamp: 3;
      }
      .button-holder{
        overflow: hidden;

        button{
          float: right;
          padding: 0 25px;
          min-height: 26px;
        }
      }
    }
  }
}

.button {
    &.button-pos-tr {
        // position: relative;
        // top: 10px;
        // right: 10px;
        float: right;
        top: -15px;
        // max-height: 20px;
        // min-height: 18px;
    }
}

.profile-pane {
   .view-section & .list.scroll-view {
        top: 0px;
    }
    
  .list{
    margin: 0 0;
    padding-top: 20px;
  }
  
  .experience-list .list {
      .item:last-child {
          margin-bottom: 50px;
      }
  }
  
  .experience-list {
      .item.activity.profile-activity {
          max-height: 18px;
      }
  }
  
  
  .hanger {
    
    margin-left: 1em;
    text-indent: -1em;
      
    .wrap-col {
        white-space: normal;
        
        span {
            line-height: 1.3em;
        }
    }
  }
  
  .profile-list {
      .card {
         & > .row {
              position: relative;
	          top: -15px;
          }
      
        padding-bottom: 0!important;
      
      }
  }

  .profile-list, .experience-list, activity-list {
      .row {
        margin-bottom: 0px;
        
            .row {
                margin-bottom: 10px;
            }
          
          & > div {
            // border: 1px solid purple;
            padding: 10px;
        }
      }
      
      .row.nested > div {
          padding: 0;
      }
      
      margin-left: 20px;
      margin-right: 20px;
      
      > .item {
        //background: none;
        padding: 10px 0 15px;
        border: none;
          
        
        .item-label{
            font-weight: bold;
            color: $gradient-bottom;
        }
        .item-title {
            font-size: 1.1em;
        }
      }
      
      .list {
          padding-top: 0;
      }
      
      
      
         
        .card {
            &.has-title {
                padding-top: 0;
            }
            
            margin-left: 0;
            margin-right: 0;
            
            .item-heading {
                background-color: $gradient-bottom;
                margin-top: 0;
                padding-left: 10px;
                
                .item-title, .button {
                    color: $stable!important;
                }
            }
         }
      
      
 	  .item {
              
        .license-lbl {
            line-height: 36px;
        }
        
        .endorsements-list{
            float: right;
            width: auto;
        }
 
        endorsements-row{
            padding-top: 0;
            line-height: 31px;
        }

        &.item-divider{
            padding: 0;
            height: 1px;
            margin-bottom: 15px;
            min-height: 0;
            background: #D2D2D2;
        }

        .item-note{
            //width: 40%;
            text-align: right;
            color: $content-body-text;
            white-space: normal;
            
            .equipment-logo {
                position: relative;

                > div {
                    margin-right: 0;
                }
                .badge{
                    top: auto;
                    bottom: -13px;
                    right: 0;
                }
            }
        }
        
        .item-loading ion-spinner svg {
            width: 48px;
            height: 48px;
        }
    }
  }    
  
}
/* ... */

